--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BizBoost Mobile First</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap"
+    />
     <link rel="stylesheet" href="src/index.css" />
   </head>
   <body>
@@ -17,7 +20,7 @@
             </a>
           </div>
           <nav class="mobile">
-            <img src="src/img/menu.svg" alt="" />
+            <img src="./src/img/Vector (2).png" alt="menu" />
           </nav>
           <nav class="desktop">
             <ul>
@@ -26,7 +29,7 @@
               </li>
               <li>
                 <a href="#">Templates</a>
-                <img src="src/img/arrow.png" alt="arrow" />
+                <img src="./src/img/arrow.png" alt="arrow" />
                 <ul class="submenu">
                   <li>
                     <a href="#">Right Sidebar</a>
@@ -48,19 +51,19 @@
               <li>
                 <div class="circle"></div>
                 <a href="#">
-                  <img src="src/img/facebook.png" alt="fb" />
+                  <img src="./src/img/facebook.png" alt="facebook" />
                 </a>
               </li>
               <li>
                 <div class="circle"></div>
                 <a href="#">
-                  <img src="src/img/twitter.png" alt="twitter" />
+                  <img src="./src/img/twitter.png" alt="twitter" />
                 </a>
               </li>
               <li>
                 <div class="circle"></div>
                 <a href="#">
-                  <img src="src/img/linkedin.png" alt="linkedIn" />
+                  <img src="./src/img/linkedin.png" alt="linkedIn" />
                 </a>
               </li>
             </ul>
@@ -70,10 +73,13 @@
         <section class="main">
           <main>
             <div class="hero-title">
-              <h1>We <span class="lowlight">build</span> digital experiences.</h1>
+              <h1>
+                We <span class="lowlight">build</span> digital experiences.
+              </h1>
             </div>
             <div class="hero-tagline">
-              We collaborate with smart and creative people to build awesome WordPress Full Site Editing Themes.
+              We collaborate with smart and creative people to build awesome
+              WordPress Full Site Editing Themes.
             </div>
             <div class="hero-cta">
               <a href="#" class="gradient-button">get started</a>
@@ -92,48 +98,97 @@
           </div>
         </section>
       </section>
-    </section>
-          <!-- Our Services Section -->
-          <section class="our-services">
-            <div class="services-figure">
-              <img src="src/img/Figure ⏵ hero-content.png.png" alt="">
+      <!-- Our Services Section -->
+      <section class="our-services">
+        <div class="services-figure">
+          <img src="./src/img/Figure ⏵ hero-content.png.png" alt="computador" />
+        </div>
+        <div class="our-services-layout">
+          <div class="headings">
+            <h6>OUR SERVICES</h6>
+            <h2>We solve creative delusions efficiently</h2>
+          </div>
+          <p>
+            The display employs new techniques and technology to precisely
+            follow the curves of the design, all the way to the elegantly
+            rounded corners.
+          </p>
+          <div class="our-services-cta">
+            <a href="#" class="gradient-button">Get Started</a>
+          </div>
+        </div>
+      </section>
+      <section class="big-numbers">
+        <div class="number-box">
+          <span class="number">
+            <h3>95</h3>
+          </span>
+          <p>Projects Completed</p>
+        </div>
+        <div class="number-box">
+          <span class="number">
+            <h3>2310</h3>
+          </span>
+          <p>Happy Clients</p>
+        </div>
+        <div class="number-box">
+          <span class="number">
+            <h3>215</h3>
+          </span>
+          <p>Hours Spents</p>
+        </div>
+        <div class="number-box">
+          <span class="number">
+            <h3>479</h3>
+          </span>
+          <p>Members</p>
+        </div>
+      </section>
+      <!--Featured Container-->
+      <section class="feature-container-layout">
+        <div class="feature-heading-container">
+          <h6>WHAT WE DO</h6>
+          <h2>Featured content</h2>
+        </div>
+        <section class="box">
+          <div class="boxes">
+            <img src="./src/img/featured-content-1.jpg (1).png" alt="lampara" />
+            <h2>Creative Lights</h2>
+            <p>
+              Lorem ipsum dolor sit amet consecte tur adipiscing elit integer
+              fermentum in orci lorem ipsum.
+            </p>
+            <a href="#"
+              >View More
+              <hr width="95px" />
+            </a>
+            <div class="boxes">
+              <img src="./src/img/Figure.png" alt="celular" />
+              <h2>Mobile Photography</h2>
+              <p>
+                Lorem ipsum dolor sit amet consecte tur adipiscing elit integer
+                fermentum in orci lorem ipsum.
+              </p>
+              <a href="#"
+                >View More
+                <hr width="95px" />
+              </a>
             </div>
-            <div class="our-services-layout">
-              <div class="headings">
-                <p>OUR SERVICES</p>
-                <h2>
-                  We solve creative
-                  delusions efficiently 
-                </h2>
-              </div>
-              <p>The display employs new techniques and technology to
-                precisely follow the curves of the design, all the way to the
-                elegantly rounded corners.</p>
-              <div class="our-services-cta">
-                <a href="#" class="gradient-button">Get Started</a>
-              </div>
+            <div class="boxes">
+              <img src="./src/img/Figure (1).png" alt="camera" />
+              <h2>Vintage Camara</h2>
+              <p>
+                Lorem ipsum dolor sit amet consecte tur adipiscing elit integer
+                fermentum in orci lorem ipsum.
+              </p>
+              <a href="#"
+                >View More
+                <hr width="95px" />
+              </a>
             </div>
-          </section>
-          <section class="big-numbers">
-            <div class="number-box">
-              <span class="number"><h2>95</h2></span>
-              <p>Projects Completed</p>
-            </div>
-            <div class="number-box">
-              <span class="number"><h2>2310</h2></span>
-              <p>Happy Clients</p>
-            </div>
-            <div class="number-box">
-              <span class="number"><h2>215</h2></span>
-              <p>Hours Spents</p>
-            </div>
-            <div class="number-box">
-              <span class="number"><h2>479</h2></span>
-              <p>Members</p>
-            </div>
-          </section>
-    
-          <!-- What We Do Section -->
+          </div>
         </section>
+      </section>
+    </section>
   </body>
 </html>
