finish footer section

--- a/index.html
+++ b/index.html
@@ -4,15 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BizBoost Mobile First</title>
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap"
-    />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap" />
     <link rel="stylesheet" href="src/index.css" />
   </head>
+
   <body>
     <section class="blocks">
-      <!-- Hero Section -->
       <section class="hero">
         <header>
           <div class="logo">
@@ -65,7 +62,7 @@
               <li>
                 <div class="circle"></div>
                 <a href="#">
-                  <img src="./src/img/linkedin.png" alt="linkedin" />
+                  <img src="./src/img/linkedin.png" alt="linkedIn" />
                 </a>
               </li>
             </ul>
@@ -75,13 +72,10 @@
         <section class="main">
           <main>
             <div class="hero-title">
-              <h1>
-                We <span class="lowlight">build</span> digital experiences.
-              </h1>
+              <h1>We <span class="lowlight">build</span> digital experiences.</h1>
             </div>
             <div class="hero-tagline">
-              We collaborate with smart and creative people to build awesome
-              WordPress Full Site Editing Themes.
+              We collaborate with smart and creative people to build awesome WordPress Full Site Editing Themes.
             </div>
             <div class="hero-cta">
               <a href="#" class="gradient-button">get started</a>
@@ -105,10 +99,7 @@
       <section class="our-services">
         <div class="services-figure">
           <figure>
-            <img
-              src="./src/img/Figure ⏵ hero-content.png.png"
-              alt="hero-content"
-            />
+            <img src="./src/img/Figure ⏵ hero-content.png.png" alt="computador" />
           </figure>
         </div>
         <div class="our-services-layout">
@@ -117,9 +108,8 @@
             <h2>We solve creative delusions efficiently</h2>
           </div>
           <p>
-            The display employs new techniques and technology to precisely
-            follow the curves of the design, all the way to the elegantly
-            rounded corners.
+            The display employs new techniques and technology to precisely follow the curves of the design, all the way
+            to the elegantly rounded corners.
           </p>
 
           <div class="our-services-cta">
@@ -128,6 +118,7 @@
         </div>
       </section>
 
+      <!-- Big Numbers -->
       <section class="big-numbers">
         <div class="number-box">
           <span class="number">
@@ -155,70 +146,46 @@
         </div>
       </section>
 
-      <!-- Featured Content -->
+      <!-- Featured Content Section  -->
       <section class="featured-content-layout">
         <div class="featured-content">
-          <h6>What We Do</h6>
+          <h6>WHAT WE DO</h6>
           <h2>Featured Content</h2>
         </div>
-        <div class="boxes-container">
+        <div class="boxes">
           <div class="box">
             <figure>
-              <img
-                src="./src/img/featured-content-1.jpg (1).png"
-                alt="Lamparas"
-              />
+              <img src="./src/img/featured-content-1.jpg (1).png" alt="Lampara" />
             </figure>
             <h4>Creative Lights</h4>
-            <p>
-              Lorem ipsum dolor sit amet consecte tur adipiscing elit integer
-              fermentum in orci lorem ipsum.
-            </p>
-            <a href="View More"
-              >View more
-              <hr />
-            </a>
-          </div>
-
-          <div class="box">
-            <figure>
-              <img src="./src/img/Figure (1).png" alt="camara" />
-            </figure>
-            <h4>Mobile Photography</h4>
-            <p>
-              Lorem ipsum dolor sit amet consecte tur adipiscing elit integer
-              fermentum in orci lorem ipsum.
-            </p>
-            <a href="View More"
-              >View more
-              <hr />
-            </a>
+            <p>Lorem ipsum dolor sit amet consecte tur adipiscing elit integer fermentum in orci lorem ipsum.</p>
+            <a href="View More">View More </a>
           </div>
 
           <div class="box">
             <figure>
               <img src="./src/img/Figure.png" alt="celular" />
             </figure>
+            <h4>Mobile Photography</h4>
+            <p>Lorem ipsum dolor sit amet consecte tur adipiscing elit integer fermentum in orci lorem ipsum.</p>
+            <a href="View More">View More </a>
+          </div>
+
+          <div class="box">
+            <figure>
+              <img src="./src/img/Figure (1).png" alt="camara" />
+            </figure>
             <h4>Vintage Camera</h4>
-            <p>
-              Lorem ipsum dolor sit amet consecte tur adipiscing elit integer
-              fermentum in orci lorem ipsum.
-            </p>
-            <a href="View More"
-              >View more
-              <hr />
-            </a>
+            <p>Lorem ipsum dolor sit amet consecte tur adipiscing elit integer fermentum in orci lorem ipsum.</p>
+            <a href="View More">View More </a>
           </div>
         </div>
       </section>
-
-      <!-- Promotional Contact -->
-
-      <section class="promotional-contact-layout">
+      <section class="promotional-container-layout">
         <span class="overlay"></span>
-        <img class="rectangle" src="./src/img/striped-bg.png" alt="image" />
-        <div class="promotional-contact">
-          <h6>Promotional Content</h6>
+        <img src="./src/img/striped-bg.png" alt="image" />
+        <div class="promotional-container">
+          <h6>PROMOTIONAL CONTACT</h6>
           <h2>Ready To Work Together?</h2>
           <a href="#" class="gradient-button">Contact Us</a>
         </div>
@@ -226,36 +193,36 @@
 
       <!-- Footer -->
       <footer>
-        <div class="footer-content">
+        <div class="footer">
           <div class="newsletter">
             <a href="/">
               <h4>BizBoost</h4>
             </a>
-            <div class="newsletter-signup">
-              <h5>newsletter-signup</h5>
-              <div class="cta">
-                <input type="text" name="email" id="email" />
-                <a href="#" class="gradient-button">Subscribe</a>
+              <div class="newsletter-signup">
+                <h5>Newsletter Signup</h5>
+                <div class="cta">
+                  <input type="email" name="email" id="email" placeholder="Email" />
+                  <button class="gradient-button email-btn">Subscribe</button>
+                </div>
               </div>
-            </div>
           </div>
-          <div class="links">
-            <div>
+          <div>
+            <div class="footer-links">
               <h5>Quick Links</h5>
               <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Templates</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#" class="selected"> Home</a></li>
+                <li><a href="#"> Templates</a></li>
+                <li><a href="#"> blog</a></li>
+                <li><a href="#"> Contact</a></li>
               </ul>
             </div>
-            <div>
+            <div class="footer-support">
               <h5>Customer Support</h5>
               <ul>
-                <li><a href="#">Support</a></li>
-                <li><a href="#">Documentation</a></li>
-                <li><a href="#">Customization</a></li>
-                <li><a href="#">FAQ</a></li>
+                <li><a href="#"> Support</a></li>
+                <li><a href="#"> Documentation</a></li>
+                <li><a href="#"> Customization</a></li>
+                <li><a href="#"> FAQ</a></li>
               </ul>
             </div>
           </div>
@@ -263,39 +230,40 @@
         <div class="copyright">
           Copyright © 2023 BizBoost by Catch Themes
 
-          <div class="social">
-            <ul>
-              <li>
-                <div class="circle"></div>
-                <a href="#">
-                  <img src="./src/img/facebook.png" alt="facebook" />
-                </a>
-              </li>
-              <li>
-                <div class="circle"></div>
-                <a href="#">
-                  <img src="./src/img/twitter.png" alt="twitter" />
-                </a>
-              </li>
-              <li>
-                <div class="circle"></div>
-                <a href="#">
-                  <img src="./src/img/linkedin.png" alt="linkedIn" />
-                </a>
-              </li>
-              <li>
-                <div class="circle"></div>
-                <a href="#">
-                  <img src="./src/img/youtube.png" alt="youtube" />
-                </a>
-              </li>
-              <li>
-                <div class="circle"></div>
-                <a href="#">
-                  <img src="./src/img/instagram.png" alt="instagram" />
-                </a>
-              </li>
-            </ul>
+            <div class="footer-social">
+              <ul>
+                <li>
+                  <div class="circle-social"></div>
+                  <a href="#">
+                    <img src="./src/img/facebook.png" alt="facebook" />
+                  </a>
+                </li>
+                <li>
+                  <div class="circle-social"></div>
+                  <a href="#">
+                    <img src="./src/img/twitter.png" alt="twitter" />
+                  </a>
+                </li>
+                <li>
+                  <div class="circle-social"></div>
+                  <a href="#">
+                    <img src="./src/img/linkedin.png" alt="linkedIn" />
+                  </a>
+                </li>
+                <li>
+                <div class="circle-social"></div>
+                  <a href="#">
+                    <img src="./src/img/youtube.png" alt="Youtube" />
+                  </a>
+                </li>
+                <li>
+                <div class="circle-social"></div>
+                  <a href="#">
+                    <img src="./src/img/instagram.png" alt="Instagram" />
+                  </a>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </footer>
