--- a/index.html
+++ b/index.html
@@ -268,5 +268,10 @@
         </div>
       </footer>
     </section>
+    <div>
+      <span class="to-top">
+        <img src="./src/img/scroll-top.png" alt="scroll-top">
+      </span>
+    </div>
   </body>
 </html>
