--- a/index.html
+++ b/index.html
@@ -269,9 +269,7 @@
       </footer>
     </section>
     <div>
-      <span class="to-top">
-        <img src="./src/img/scroll-top.png" alt="scroll-top">
-      </span>
+      <a class="float" href="/"> ^ </a>
     </div>
   </body>
 </html>
